<?php

namespace App\Services\PaymentStrategy;

/**
 * Mobile Payment Strategy (e.g., Apple Pay, Google Pay, etc.)
 */
class MobilePayment implements PaymentStrategyInterface
{
    public function processPayment(float $amount, array $data = []): array
    {
        // Simulate mobile payment processing
        // In production, integrate with mobile payment APIs
        
        $provider = $data['provider'] ?? 'unknown';
        $token = $data['payment_token'] ?? '';
        
        if (empty($token)) {
            return [
                'success' => false,
                'transaction_id' => null,
                'message' => 'Payment token is required'
            ];
        }
        
        // Simulate payment processing
        usleep(300000); // 0.3 seconds
        
        // Simulate 98% success rate for mobile payments
        $success = rand(1, 100) <= 98;
        
        if ($success) {
            return [
                'success' => true,
                'transaction_id' => 'MOBILE-' . strtoupper($provider) . '-' . time() . '-' . rand(1000, 9999),
                'message' => 'Mobile payment processed successfully'
            ];
        } else {
            return [
                'success' => false,
                'transaction_id' => null,
                'message' => 'Mobile payment failed. Please try again.'
            ];
        }
    }
}

